init frontend projects

--- a/backend/Backend-API/Backend-API.csproj
+++ b/backend/Backend-API/Backend-API.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Backend_API</RootNamespace>
+    <UserSecretsId>b5c7221d-3744-46a3-b752-f4de67516105</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
