--- a/backend/Backend-API/appsettings.json
+++ b/backend/Backend-API/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "JwtConfig": {
+        "Secret": "rovnahoptohfvszhdfzshcgckyaapshm"
+    },
+    "AllowedHosts": "*"
 }
