--- a/frontend/App/app.json
+++ b/frontend/App/app.json
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "APIAddress": "http://192.168.1.19:45455/api"
   }
 }
