--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -23,13 +23,14 @@
     "react-native-screens": "^2.18.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.0",
     "react-navigation-header-buttons": "^7.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.13.15"
   },
   "private": true
 }
