--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -14,6 +14,7 @@
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -21,6 +22,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
