--- a/backend/Backend-API/appsettings.json
+++ b/backend/Backend-API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-HFQ0L7K\\MSSQLSERVER01;Database=AppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
