--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -9,20 +9,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
     "axios": "^0.21.1",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~9.1.0",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "pod-install": "^0.1.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-bouncy-checkbox": "^2.1.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
