--- a/backend/Backend-API/appsettings.json
+++ b/backend/Backend-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-HFQ0L7K\\MSSQLSERVER01;Database=AppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
     "Logging": {
         "LogLevel": {
