--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -25,6 +25,7 @@
     "react-native-bouncy-checkbox": "^2.1.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^3.3.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
