added profile picture upload, better error messages from server, added file service

--- a/backend/Backend-API/web.config
+++ b/backend/Backend-API/web.config
@@ -8,7 +8,8 @@
       <aspNetCore processPath="bin\Debug\net5.0\Backend-API.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
-        </environmentVariables>
+          <environmentVariable name="CLOUDINARY_URL" value="cloudinary://177575321869347:qXHKex1Pvt9IUnGwwWGNnG-zlso@dogapp444" />
+      </environmentVariables>
       </aspNetCore>
     </system.webServer>
   </location>
