--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -9,13 +9,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "^3.0.3",
-    "axios": "^0.21.1",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
     "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
@@ -24,14 +23,12 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-deck-swiper": "^2.0.5",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.4",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-select-multiple": "^2.1.0",
-    "react-native-swipe-gestures": "^1.0.5",
-    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
@@ -40,7 +37,7 @@
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~10.1.3"
+    "expo-permissions": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
