--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -16,6 +16,7 @@
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
+    "expo-permissions": "~12.0.1",
     "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "pod-install": "^0.1.21",
@@ -35,9 +36,10 @@
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "expo-permissions": "~12.0.1"
+    "symbol-observable": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
