--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -40,7 +40,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "symbol-observable": "^4.0.0",
-    "react-native-maps": "0.27.1"
+    "react-native-maps": "0.27.1",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
