--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/slider": "^3.0.3",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-asset": "~8.3.1",
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
@@ -26,10 +27,12 @@
     "react-native-deck-swiper": "^2.0.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.4",
+    "react-native-maps": "0.27.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-select-multiple": "^2.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
@@ -39,9 +42,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "symbol-observable": "^4.0.0",
-    "react-native-maps": "0.27.1",
-    "react-native-svg": "12.1.0"
+    "symbol-observable": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
