--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -17,6 +17,7 @@
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
+    "expo-notifications": "~0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
@@ -44,8 +45,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "symbol-observable": "^4.0.0",
-    "expo-notifications": "~0.11.6"
+    "symbol-observable": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
