--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -31,7 +31,7 @@
     "react-native-image-picker": "^3.3.4",
     "react-native-maps": "0.27.1",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-select-multiple": "^2.1.0",
     "react-native-svg": "12.1.0",
@@ -45,7 +45,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "symbol-observable": "^4.0.0"
+    "symbol-observable": "^4.0.0",
+    "react-native-reanimated": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
