--- a/.github/workflows/admin_workflow.yml
+++ b/.github/workflows/admin_workflow.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - frontend/admin-panel
   workflow_dispatch:
 
 jobs:
@@ -23,9 +25,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          cd frontend/admin-panel && npm install
+          cd frontend/admin-panel && npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
