--- a/.github/workflows/admin_workflow.yml
+++ b/.github/workflows/admin_workflow.yml
@@ -26,7 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           cd frontend/admin-panel && npm install
-          cd frontend/admin-panel && npm run build --if-present
+          npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
