--- a/.github/workflows/admin_workflow.yml
+++ b/.github/workflows/admin_workflow.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: frontend/admin-panel
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,4 +54,4 @@ jobs:
           app-name: 'TinDog-admin'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9D8BADEE4AE14E9AADCF064266A6D56B }}
-          package: .
+          package: frontend/admin-panel
