--- a/.github/workflows/admin_workflow.yml
+++ b/.github/workflows/admin_workflow.yml
@@ -23,10 +23,11 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
-        run: |
-          cd frontend/admin-panel && npm install
-          npm run build --if-present
+      - name: npm install 
+        run: cd frontend/admin-panel && npm install
+        
+      - name: npm build 
+        run: cd frontend/admin-panel && npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
