--- a/.github/workflows/admin_workflow.yml
+++ b/.github/workflows/admin_workflow.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - frontend/admin-panel
+      - frontend/admin-panel/**
   workflow_dispatch:
 
 jobs:
