--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -31,12 +31,11 @@
     "react-native-image-picker": "^3.3.4",
     "react-native-maps": "0.27.1",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "^2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-select-multiple": "^2.1.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.2.3",
+    "react-native-webview": "^11.2.3",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
     "react-navigation-header-buttons": "^6.3.1",
@@ -45,7 +44,9 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "symbol-observable": "^4.0.0"
+    "symbol-observable": "^4.0.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-reanimated": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
