--- a/frontend/App/package.json
+++ b/frontend/App/package.json
@@ -17,6 +17,7 @@
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
+    "expo-notifications": "~0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
@@ -30,7 +31,7 @@
     "react-native-image-picker": "^3.3.4",
     "react-native-maps": "0.27.1",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^1.13.1",
     "react-native-screens": "~3.0.0",
     "react-native-select-multiple": "^2.1.0",
     "react-native-svg": "12.1.0",
@@ -44,8 +45,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "symbol-observable": "^4.0.0",
-    "expo-notifications": "~0.11.6"
+    "symbol-observable": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
