--- a/.github/workflows/App_workflow.yml
+++ b/.github/workflows/App_workflow.yml
@@ -13,6 +13,12 @@ jobs:
     name: Install and publish
     runs-on: ubuntu-latest
     steps:
+      - name: Update config
+        run: "mv frontend/App/app.config.json frontend/App/app.config.local.json"
+        
+      - name: Update config
+        run: "mv frontend/App/app.config.azure.json frontend/App/app.config.json"
+    
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
