added onwer key

--- a/frontend/App/app.json
+++ b/frontend/App/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "sdkVersion": "41.0.0",
+    "owner": "tindog",
     "android": {
       "package": "com.shahafm.tindog",
       "versionCode": 1,
